fix z-index and css

--- a/src/components/DirectoryItem/DirectoyItem.module.scss
+++ b/src/components/DirectoryItem/DirectoyItem.module.scss
@@ -10,6 +10,12 @@
   flex-direction: column;
   box-sizing: border-box;
 
+  &.dragging {
+    opacity: 0.5;
+    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+    z-index: 100;
+  }
+
   .container {
     display: flex;
 
@@ -17,6 +23,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      background: white;
     }
 
     .dropzones {
