--- a/src/components/DroppableZone/DroppableZone.module.scss
+++ b/src/components/DroppableZone/DroppableZone.module.scss
@@ -9,6 +9,6 @@
 
 
   &.over {
-    box-shadow: inset #1eb99d 0 0 0 3px, rgba(201, 211, 219, 0.5) 20px 14px 24px;
+    box-shadow: inset #1eb99d 0 0 0 3px;
   }
 }
